Fix buggy touch controls

--- a/force-app/main/default/lwc/smsSweeperForce/smsSweeperForce.html
+++ b/force-app/main/default/lwc/smsSweeperForce/smsSweeperForce.html
@@ -51,10 +51,10 @@
                 aria-label={cell.ariaLabel}
                 onkeydown={handleCellStart}
                 onmousedown={handleCellStart}
-                ontouchstart={handleCellTouchStart}
+                ontouchstart={handleCellStart}
                 onmouseup={handleCellEnd}
                 onkeyup={handleCellEnd}
-                ontouchend={handleCellTouchEnd}
+                ontouchend={handleCellEnd}
                 oncontextmenu={handleDisableEvent}
                 onselect={handleDisableEvent}>
 
