--- a/force-app/main/default/lwc/smsSweeperForceModal/smsSweeperForceModal.html
+++ b/force-app/main/default/lwc/smsSweeperForceModal/smsSweeperForceModal.html
@@ -41,12 +41,12 @@
                 <p class="slds-m-bottom_small">
                     <b>Clear the mines!</b> Expose squares one at a time by clicking on them.
                     If the square is clear, you'll get to see how many of its neighbors have mines in them (0 through
-                    8); but if the square has a mine in it, all the mines will explode.
+                    8). However, if the square has a mine in it, all the mines will explode.
                 </p>
                 <p class="slds-m-bottom_small">
-                    Right-click on a square to flag it as a suspected mine. Do it again to
+                    <em>Right-click</em> or <em>Long-Press</em> on a square to flag it as a suspected mine. Do it again to
                     mark it as questionable, and again to clear the mark. When you've exposed all the vacant squares,
-                    you win. If a mine explodes, you lose. Click on the face to start a new game.
+                    you win. If a mine explodes, you lose. Click on the refresh button to start a new game.
                 </p>
                 <p class="slds-m-bottom_small">
                     The left-hand counter shows the number of mines less the number of
@@ -76,7 +76,7 @@
                             </a>
                         </p>
                         <p class="slds-text-color_weak slds-text-body_small">
-                            Version: 1.0.0
+                            Version: 1.0.1
                         </p>
                     </div>
                 </div>
