Add shake screen to explosion.

--- a/force-app/main/default/lwc/smsSweeperForceModal/smsSweeperForceModal.html
+++ b/force-app/main/default/lwc/smsSweeperForceModal/smsSweeperForceModal.html
@@ -39,18 +39,18 @@
                     How to Play
                 </h2>
                 <p class="slds-m-bottom_small">
-                    <b>Clear the mines!</b> Expose squares one at a time by clicking on them.
-                    If the square is clear, you'll get to see how many of its neighbors have mines in them (0 through
-                    8). However, if the square has a mine in it, all the mines will explode.
+                    <b>Clear the mines!</b> Expose squares one at a time by clicking on them. If the square is clear,
+                    you'll get to see how many of its neighbors have mines in them (0 through 8). However, if the square
+                    has a mine in it, all the mines will explode.
                 </p>
                 <p class="slds-m-bottom_small">
-                    <em>Right-click</em> or <em>Long-Press</em> on a square to flag it as a suspected mine. Do it again to
-                    mark it as questionable, and again to clear the mark. When you've exposed all the vacant squares,
+                    <em>Right-click</em> or <em>Long-Press</em> on a square to flag it as a suspected mine. Do it again
+                    to mark it as questionable, and again to clear the mark. When you've exposed all the vacant squares,
                     you win. If a mine explodes, you lose. Click on the refresh button to start a new game.
                 </p>
                 <p class="slds-m-bottom_small">
-                    The left-hand counter shows the number of mines less the number of
-                    squares that you've flagged (correctly or not).
+                    The left-hand counter shows the number of mines less the number of squares that you've flagged
+                    (correctly or not).
                 </p>
 
                 <h2 class="slds-m-top_medium slds-text-heading_medium">
@@ -64,19 +64,21 @@
                         </p>
                         <p class="slds-m-bottom_x-small slds-text-body_small">
                             See a problem? Help out by <a href="https://github.com/megasmack/SweeperForce/issues"
-                                target="_blank">logging a bug on <span>GitHub <lightning-icon icon-name="utility:new_window"
-                                    size="xx-small" class="slds-current-color"></lightning-icon></span></a>.
+                                target="_blank">logging a bug on <span>GitHub <lightning-icon
+                                        icon-name="utility:new_window"
+                                        size="xx-small" class="slds-current-color"></lightning-icon></span></a>.
                         </p>
                         <p class="slds-m-bottom_xxx-small slds-text-body_small">
                             <a href="https://github.com/megasmack/SweeperForce" target="_blank">
                                 <span>
                                     GitHub Repo
-                                    <lightning-icon icon-name="utility:new_window" size="xx-small" class="slds-current-color"></lightning-icon>
+                                    <lightning-icon icon-name="utility:new_window" size="xx-small"
+                                        class="slds-current-color"></lightning-icon>
                                 </span>
                             </a>
                         </p>
                         <p class="slds-text-color_weak slds-text-body_small">
-                            Version: 1.0.1
+                            Version: 1.0.2
                         </p>
                     </div>
                 </div>
